[gd_scene load_steps=4 format=3 uid="uid://bertyga7ookeu"]

[ext_resource type="Script" uid="uid://dm2iaxru0pj1j" path="res://scripts/bullet_controller.gd" id="1_mkf8s"]
[ext_resource type="Texture2D" uid="uid://bviypcg6x4owc" path="res://textures/273 design bullet head transparent.png" id="2_y25gk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkf8s"]
size = Vector2(30, 30)

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_mkf8s")

[node name="BulletSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 0.00039331533
scale = Vector2(0.031, 0.034)
texture = ExtResource("2_y25gk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mkf8s")

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
